# SynthPlugin

./: .gitignore  CMakeLists.txt  README.md  build-windows.sh  install-windows.sh
Source/: Arpeggiator.cpp  Arpeggiator.h  DelayEffect.cpp  DelayEffect.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbEffect.cpp  ReverbEffect.h  SynthVoice.cpp  SynthVoice.h
